// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DraftOrderModal/> should not render when the modal is closed 1`] = `null`;

exports[`<DraftOrderModal/> should render a sent invoice 1`] = `
<div>
  <div
    data-testid="Modal"
  >
    <div
      class="formHeader"
    >
      <div
        data-testid="ProductSearchInput"
      >
        <div
          data-testid="ProductSearchInput_result"
        >
          Result
        </div>
      </div>
      <div
        data-testid="AddCustomItemPopover"
      >
        <div
          data-testid="AddCustomItemPopover_submit"
        >
          Submit
        </div>
      </div>
    </div>
    <div>
      <table
        class="table table table-hover"
      >
        <thead>
          <tr>
            <th>
              Product
            </th>
            <th>
              In stock
            </th>
            <th>
              Item price
            </th>
            <th>
              Qty
            </th>
            <th>
              Item total
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="container"
            >
              <div
                class="imgContainer"
              >
                <img
                  alt="Alt"
                  class="img"
                />
              </div>
              <div
                class="legend"
              >
                <div>
                  <a
                    class="title"
                    href="https://gorgiastest.myshopify.com/admin/products/8345093387/variants/31128766316567"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Acidulous candy
                  </a>
                </div>
                <div
                  class="subtitle"
                >
                  Red / A
                </div>
                <div
                  class="subtitle"
                >
                  SKU: 
                  11111
                </div>
              </div>
            </td>
            <td
              class="numberCol"
            >
              <span
                class="text-muted"
              >
                N/A
              </span>
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <div
                  class="d-inline-block text-center"
                >
                  <div>
                    <button
                      class="p-0 button focusable btn btn-link"
                      id="applied-discount-8345093387_31128766316567"
                      tabindex="0"
                      type="button"
                    >
                      <strong>
                        <span>
                          €9.99
                        </span>
                      </strong>
                    </button>
                  </div>
                </div>
                <span
                  class="times"
                >
                  x
                </span>
              </div>
            </td>
            <td
              class="quantityCol"
            >
              <input
                class="form-control"
                min="1"
                type="number"
                value="1"
              />
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <strong
                  class="mt-auto mb-auto mr-auto"
                >
                  <span>
                    €9.99
                  </span>
                </strong>
                <button
                  class="delete focusable btn btn-link"
                  tabindex="0"
                  type="button"
                >
                  <i
                    class="material-icons"
                  >
                    close
                  </i>
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td
              class="container"
            >
              <div
                class="imgContainer"
              >
                <img
                  alt="Alt"
                  class="img"
                />
              </div>
              <div
                class="legend"
              >
                <div>
                  <a
                    class="title"
                    href="https://gorgiastest.myshopify.com/admin/products/8345093387/variants/31128766349335"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Acidulous candy
                  </a>
                </div>
                <div
                  class="subtitle"
                >
                  Red / B
                </div>
                <div
                  class="subtitle"
                >
                  SKU: 
                  11111
                </div>
              </div>
            </td>
            <td
              class="numberCol"
            >
              <span
                class="text-muted"
              >
                N/A
              </span>
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <div
                  class="d-inline-block text-center"
                >
                  <div>
                    <button
                      class="p-0 button focusable btn btn-link"
                      id="applied-discount-8345093387_31128766349335"
                      tabindex="0"
                      type="button"
                    >
                      <strong>
                        <span>
                          €9.99
                        </span>
                      </strong>
                    </button>
                  </div>
                </div>
                <span
                  class="times"
                >
                  x
                </span>
              </div>
            </td>
            <td
              class="quantityCol"
            >
              <input
                class="form-control"
                min="1"
                type="number"
                value="4"
              />
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <strong
                  class="mt-auto mb-auto mr-auto"
                >
                  <span>
                    €39.96
                  </span>
                </strong>
                <button
                  class="delete focusable btn btn-link"
                  tabindex="0"
                  type="button"
                >
                  <i
                    class="material-icons"
                  >
                    close
                  </i>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        data-testid="OrderFooter"
      >
        editable: true
        actionName: shopifyDuplicateOrder
        currencyCode: EUR
      </div>
      <div
        class="emailInvoiceContainer"
      >
        <h4
          class="mr-auto"
        >
          Invoice sent
        </h4>
        <span
          class="mr-4"
        >
          Sent on
           
          <div
            data-testid="DatetimeLabel"
          >
            2020-02-26T21:31:34-05:00
          </div>
        </span>
        <div
          data-testid="EmailInvoicePopover"
        >
          <div
            data-testid="EmailInvoicePopover_submit"
          >
            Submit
          </div>
        </div>
      </div>
    </div>
    <div
      class="formFooter modal-footer"
    >
      <button
        class="focusable btn btn-secondary"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        class="focusable ml-auto btn btn-primary"
        tabindex="0"
        type="button"
      >
        Create order as paid
      </button>
      <button
        class="focusable btn btn-primary"
        tabindex="0"
        type="button"
      >
        Create order as pending
      </button>
    </div>
  </div>
</div>
`;

exports[`<DraftOrderModal/> should render a spinner when missing data 1`] = `
<div>
  <div
    data-testid="Modal"
  >
    <div
      class="formHeader"
    >
      <div
        data-testid="ProductSearchInput"
      >
        <div
          data-testid="ProductSearchInput_result"
        >
          Result
        </div>
      </div>
      <div
        data-testid="AddCustomItemPopover"
      >
        <div
          data-testid="AddCustomItemPopover_submit"
        >
          Submit
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 500px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
      </div>
    </div>
    <div
      class="formFooter modal-footer"
    >
      <button
        class="focusable btn btn-secondary"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        class="focusable ml-auto btn btn-primary disabled"
        disabled=""
        tabindex="0"
        type="button"
      >
        Create order as paid
      </button>
      <button
        class="focusable btn btn-primary disabled"
        disabled=""
        tabindex="0"
        type="button"
      >
        Create order as pending
      </button>
    </div>
  </div>
</div>
`;

exports[`<DraftOrderModal/> should render with a default currency if missing from integrations 1`] = `
<div>
  <div
    data-testid="Modal"
  >
    <div
      class="formHeader"
    >
      <div
        data-testid="ProductSearchInput"
      >
        <div
          data-testid="ProductSearchInput_result"
        >
          Result
        </div>
      </div>
      <div
        data-testid="AddCustomItemPopover"
      >
        <div
          data-testid="AddCustomItemPopover_submit"
        >
          Submit
        </div>
      </div>
    </div>
    <div>
      <table
        class="table table table-hover"
      >
        <thead>
          <tr>
            <th>
              Product
            </th>
            <th>
              In stock
            </th>
            <th>
              Item price
            </th>
            <th>
              Qty
            </th>
            <th>
              Item total
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="container"
            >
              <div
                class="imgContainer"
              >
                <img
                  alt="Alt"
                  class="img"
                />
              </div>
              <div
                class="legend"
              >
                <div>
                  <a
                    class="title"
                    href="https://gorgiastest.myshopify.com/admin/products/8345093387/variants/31128766316567"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Acidulous candy
                  </a>
                </div>
                <div
                  class="subtitle"
                >
                  Red / A
                </div>
                <div
                  class="subtitle"
                >
                  SKU: 
                  11111
                </div>
              </div>
            </td>
            <td
              class="numberCol"
            >
              <span
                class="text-muted"
              >
                N/A
              </span>
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <div
                  class="d-inline-block text-center"
                >
                  <div>
                    <button
                      class="p-0 button focusable btn btn-link"
                      id="applied-discount-8345093387_31128766316567"
                      tabindex="0"
                      type="button"
                    >
                      <strong>
                        <span>
                          $9.99
                        </span>
                      </strong>
                    </button>
                  </div>
                </div>
                <span
                  class="times"
                >
                  x
                </span>
              </div>
            </td>
            <td
              class="quantityCol"
            >
              <input
                class="form-control"
                min="1"
                type="number"
                value="1"
              />
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <strong
                  class="mt-auto mb-auto mr-auto"
                >
                  <span>
                    $9.99
                  </span>
                </strong>
                <button
                  class="delete focusable btn btn-link"
                  tabindex="0"
                  type="button"
                >
                  <i
                    class="material-icons"
                  >
                    close
                  </i>
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td
              class="container"
            >
              <div
                class="imgContainer"
              >
                <img
                  alt="Alt"
                  class="img"
                />
              </div>
              <div
                class="legend"
              >
                <div>
                  <a
                    class="title"
                    href="https://gorgiastest.myshopify.com/admin/products/8345093387/variants/31128766349335"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Acidulous candy
                  </a>
                </div>
                <div
                  class="subtitle"
                >
                  Red / B
                </div>
                <div
                  class="subtitle"
                >
                  SKU: 
                  11111
                </div>
              </div>
            </td>
            <td
              class="numberCol"
            >
              <span
                class="text-muted"
              >
                N/A
              </span>
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <div
                  class="d-inline-block text-center"
                >
                  <div>
                    <button
                      class="p-0 button focusable btn btn-link"
                      id="applied-discount-8345093387_31128766349335"
                      tabindex="0"
                      type="button"
                    >
                      <strong>
                        <span>
                          $9.99
                        </span>
                      </strong>
                    </button>
                  </div>
                </div>
                <span
                  class="times"
                >
                  x
                </span>
              </div>
            </td>
            <td
              class="quantityCol"
            >
              <input
                class="form-control"
                min="1"
                type="number"
                value="4"
              />
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <strong
                  class="mt-auto mb-auto mr-auto"
                >
                  <span>
                    $39.96
                  </span>
                </strong>
                <button
                  class="delete focusable btn btn-link"
                  tabindex="0"
                  type="button"
                >
                  <i
                    class="material-icons"
                  >
                    close
                  </i>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        data-testid="OrderFooter"
      >
        editable: true
        actionName: shopifyDuplicateOrder
        currencyCode: USD
      </div>
      <div
        class="emailInvoiceContainer"
      >
        <h4
          class="mr-auto"
        >
          Email invoice
        </h4>
        <div
          data-testid="EmailInvoicePopover"
        >
          <div
            data-testid="EmailInvoicePopover_submit"
          >
            Submit
          </div>
        </div>
      </div>
    </div>
    <div
      class="formFooter modal-footer"
    >
      <button
        class="focusable btn btn-secondary"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        class="focusable ml-auto btn btn-primary"
        tabindex="0"
        type="button"
      >
        Create order as paid
      </button>
      <button
        class="focusable btn btn-primary"
        tabindex="0"
        type="button"
      >
        Create order as pending
      </button>
    </div>
  </div>
</div>
`;

exports[`<DraftOrderModal/> should render with a populated order table when data is populated 1`] = `
<div>
  <div
    data-testid="Modal"
  >
    <div
      class="formHeader"
    >
      <div
        data-testid="ProductSearchInput"
      >
        <div
          data-testid="ProductSearchInput_result"
        >
          Result
        </div>
      </div>
      <div
        data-testid="AddCustomItemPopover"
      >
        <div
          data-testid="AddCustomItemPopover_submit"
        >
          Submit
        </div>
      </div>
    </div>
    <div>
      <table
        class="table table table-hover"
      >
        <thead>
          <tr>
            <th>
              Product
            </th>
            <th>
              In stock
            </th>
            <th>
              Item price
            </th>
            <th>
              Qty
            </th>
            <th>
              Item total
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="container"
            >
              <div
                class="imgContainer"
              >
                <img
                  alt="Alt"
                  class="img"
                />
              </div>
              <div
                class="legend"
              >
                <div>
                  <a
                    class="title"
                    href="https://gorgiastest.myshopify.com/admin/products/8345093387/variants/31128766316567"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Acidulous candy
                  </a>
                </div>
                <div
                  class="subtitle"
                >
                  Red / A
                </div>
                <div
                  class="subtitle"
                >
                  SKU: 
                  11111
                </div>
              </div>
            </td>
            <td
              class="numberCol"
            >
              <span
                class="text-muted"
              >
                N/A
              </span>
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <div
                  class="d-inline-block text-center"
                >
                  <div>
                    <button
                      class="p-0 button focusable btn btn-link"
                      id="applied-discount-8345093387_31128766316567"
                      tabindex="0"
                      type="button"
                    >
                      <strong>
                        <span>
                          €9.99
                        </span>
                      </strong>
                    </button>
                  </div>
                </div>
                <span
                  class="times"
                >
                  x
                </span>
              </div>
            </td>
            <td
              class="quantityCol"
            >
              <input
                class="form-control"
                min="1"
                type="number"
                value="1"
              />
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <strong
                  class="mt-auto mb-auto mr-auto"
                >
                  <span>
                    €9.99
                  </span>
                </strong>
                <button
                  class="delete focusable btn btn-link"
                  tabindex="0"
                  type="button"
                >
                  <i
                    class="material-icons"
                  >
                    close
                  </i>
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td
              class="container"
            >
              <div
                class="imgContainer"
              >
                <img
                  alt="Alt"
                  class="img"
                />
              </div>
              <div
                class="legend"
              >
                <div>
                  <a
                    class="title"
                    href="https://gorgiastest.myshopify.com/admin/products/8345093387/variants/31128766349335"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Acidulous candy
                  </a>
                </div>
                <div
                  class="subtitle"
                >
                  Red / B
                </div>
                <div
                  class="subtitle"
                >
                  SKU: 
                  11111
                </div>
              </div>
            </td>
            <td
              class="numberCol"
            >
              <span
                class="text-muted"
              >
                N/A
              </span>
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <div
                  class="d-inline-block text-center"
                >
                  <div>
                    <button
                      class="p-0 button focusable btn btn-link"
                      id="applied-discount-8345093387_31128766349335"
                      tabindex="0"
                      type="button"
                    >
                      <strong>
                        <span>
                          €9.99
                        </span>
                      </strong>
                    </button>
                  </div>
                </div>
                <span
                  class="times"
                >
                  x
                </span>
              </div>
            </td>
            <td
              class="quantityCol"
            >
              <input
                class="form-control"
                min="1"
                type="number"
                value="4"
              />
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <strong
                  class="mt-auto mb-auto mr-auto"
                >
                  <span>
                    €39.96
                  </span>
                </strong>
                <button
                  class="delete focusable btn btn-link"
                  tabindex="0"
                  type="button"
                >
                  <i
                    class="material-icons"
                  >
                    close
                  </i>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        data-testid="OrderFooter"
      >
        editable: true
        actionName: shopifyDuplicateOrder
        currencyCode: EUR
      </div>
      <div
        class="emailInvoiceContainer"
      >
        <h4
          class="mr-auto"
        >
          Email invoice
        </h4>
        <div
          data-testid="EmailInvoicePopover"
        >
          <div
            data-testid="EmailInvoicePopover_submit"
          >
            Submit
          </div>
        </div>
      </div>
    </div>
    <div
      class="formFooter modal-footer"
    >
      <button
        class="focusable btn btn-secondary"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        class="focusable ml-auto btn btn-primary"
        tabindex="0"
        type="button"
      >
        Create order as paid
      </button>
      <button
        class="focusable btn btn-primary"
        tabindex="0"
        type="button"
      >
        Create order as pending
      </button>
    </div>
  </div>
</div>
`;

exports[`<DraftOrderModal/> should render with an empty order table when data is empty 1`] = `
<div>
  <div
    data-testid="Modal"
  >
    <div
      class="formHeader"
    >
      <div
        data-testid="ProductSearchInput"
      >
        <div
          data-testid="ProductSearchInput_result"
        >
          Result
        </div>
      </div>
      <div
        data-testid="AddCustomItemPopover"
      >
        <div
          data-testid="AddCustomItemPopover_submit"
        >
          Submit
        </div>
      </div>
    </div>
    <div>
      <table
        class="table table"
      >
        <thead>
          <tr>
            <th>
              Product
            </th>
            <th>
              In stock
            </th>
            <th>
              Item price
            </th>
            <th>
              Qty
            </th>
            <th>
              Item total
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="text-center text-muted"
              colspan="4"
            >
              <small>
                No items
              </small>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        data-testid="OrderFooter"
      >
        editable: true
        actionName: shopifyDuplicateOrder
        currencyCode: EUR
      </div>
      <div
        class="emailInvoiceContainer"
      >
        <h4
          class="mr-auto"
        >
          Email invoice
        </h4>
        <div
          data-testid="EmailInvoicePopover"
        >
          <div
            data-testid="EmailInvoicePopover_submit"
          >
            Submit
          </div>
        </div>
      </div>
    </div>
    <div
      class="formFooter modal-footer"
    >
      <button
        class="focusable btn btn-secondary"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        class="focusable ml-auto btn btn-primary disabled"
        disabled=""
        tabindex="0"
        type="button"
      >
        Create order as paid
      </button>
      <button
        class="focusable btn btn-primary disabled"
        disabled=""
        tabindex="0"
        type="button"
      >
        Create order as pending
      </button>
    </div>
  </div>
</div>
`;
